added the paragraph

--- a/plants.html
+++ b/plants.html
@@ -33,6 +33,6 @@
     </div>
     </div>
      </div>
-<p></p>
+<p>When we reduce the page size slowly plant name row breaks first since the length of plant name is greater than the letter in the name.</p>
 </body>
 </html>
