--- a/plants.html
+++ b/plants.html
@@ -54,8 +54,9 @@
  </div>
 
 
- <table class="table Table-striped. table-hover table-boarded caption-top caption-top">
-  <caption> Plants, Mountains,and Lakhs that starts with the following letter </caption>
+ <table class="table table-striped table-hover table-boarded caption-top caption-top">
+  
+  <caption> Below are the Plants, Mountains,and Lakhs that starts with the following letter </caption>
   <thead class = "table-dark">
     <tr>
       <th scope="col">Letter</th>
@@ -104,6 +105,26 @@
       <td>Kakhovskoye</td>
     </tr>
     
-  
   </tbody>
 </table>
+
+
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class = "btn-group me-2" role="group" arial-label="First group">
+  <button type="button" class="btn btn-success">C</button>
+  <button type="button" class="btn btn-success">H</button>
+  <button type="button" class="btn btn-success">E</button>
+</div>
+
+<div class = "btn-group me-2" role="group" arial-label="Second group">
+  <button type="button" class="btn btn-warning">L</button>
+  <button type="button" class="btn btn-warning">I</button>
+</div>
+
+<div class = "btn-group me-2" role="group" arial-label="Third group">
+ <button type="button" class="btn btn-danger">K</button>
+ </div>
+
+ </div>
+
+
