--- a/plants.html
+++ b/plants.html
@@ -55,7 +55,7 @@
 
 
  <table class="table table-striped table-hover table-boarded caption-top caption-top">
-  
+
   <caption> Below are the Plants, Mountains,and Lakhs that starts with the following letter </caption>
   <thead class = "table-dark">
     <tr>
@@ -125,6 +125,14 @@
  <button type="button" class="btn btn-danger">K</button>
  </div>
 
- </div>
+</div>
+
+<div class ="dropdown">
+  <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">dropdown</button>
+<div class ="dropdown-menu">
+  <a class ="dropdown-item" href="basic.html">Basic Bootstrap</a>
+  <a class ="dropdown-item" href="advance.html"> Advanced Boostrap</a>
+</div>
+</div>
 
 
