--- a/plants.html
+++ b/plants.html
@@ -167,5 +167,18 @@
     <label class="form-check-label"> sign up for newsletter?</label>
     <input type="checkbox" class="form-check-input">
     </div>
-  <button class="btn btn-primary" types="submit">Submit</button>
+  <button class="btn btn-primary" type="submit">Submit</button>
 </form>
+
+
+<div class="card-group container" style="width:50rem">
+  <div class="card">
+    <img src="Crocosmia.jpg" class="Cardimage">
+    <div class="card-body">
+      <h3>Crocosmia </h3>
+      <p class ="card-text">Crocosmia also known as montbretia is a small genus of flowering plants in the iris family, Iridaceae.Crocosmia are summer blooming bulbs with sword-like foliage and brightly-colored flowers on wiry, arching stems. The buds open one-by-one from the bottom up and the tubular flowers are magnets for hummingbirds.
+        Some crocosmias can become invasive. Common montbretia (Crocosmia crocosmiiflora) has 'escaped' from gardens into the wild, where it can crowd out more delicate native species. So it's best not to grow it if your garden adjoins open countryside. To avoid spreading it in your garden, don't compost unwanted plants.
+      </p>
+    </div>
+  </div>
+</div>
