--- a/plants.html
+++ b/plants.html
@@ -173,12 +173,33 @@
 
 <div class="card-group container" style="width:50rem">
   <div class="card">
-    <img src="Crocosmia.jpg" class="Cardimage">
+    <img src="Crocosmia.jpg" class="Card-img-top">
     <div class="card-body">
       <h3>Crocosmia </h3>
-      <p class ="card-text">Crocosmia also known as montbretia is a small genus of flowering plants in the iris family, Iridaceae.Crocosmia are summer blooming bulbs with sword-like foliage and brightly-colored flowers on wiry, arching stems. The buds open one-by-one from the bottom up and the tubular flowers are magnets for hummingbirds.
-        Some crocosmias can become invasive. Common montbretia (Crocosmia crocosmiiflora) has 'escaped' from gardens into the wild, where it can crowd out more delicate native species. So it's best not to grow it if your garden adjoins open countryside. To avoid spreading it in your garden, don't compost unwanted plants.
-      </p>
+      <p class ="card-text"> The Crocosmia is a vibrant and rather unusual looking genus in the iridaceae family. It is often referred to as Lucifer because they can come in a bright, paprika-like shade of red. In America, they are also known as falling stars.
+        Crocosmia are rich orange, tube shaped flowers arranged around a central axis with little clusters of flowers that branch out into a typical freesia-like flower spike.</p>
+      <a href="http://www.flowers.org.uk/flowers/flowers-names/a-d/crocosmia/" class=" btn btn-primary"> Description</a>
     </div>
   </div>
+<div class ="card">
+  <img src = "Habranthus3.jpg" class="Card-img-top">
+  <div class="card-body">
+  <h3> Habranthus </h3>
+   <p class ="card-text"> Habranthus is a genus in the Amaryllidaceae family with species from Central and South America extending into southern North America. They have narrow, linear or strap-shaped leaves. Their flowers are very similar to Zephyranthes and both are called rain lilies. Habranthus flowers point upward BUT at an angle and have unequal stamens in 4 different sizes, and Zephyranthes flowers point straight up and have 6 equal stamens, or 3 shorter and 3 taller. Zephyranthes flowers tends to be star shaped and Habranthus have somewhat irregular flowers. Additionally, the seeds of Habranthus are slightly winged (and thicker during the fruit dehiscence). Some Zephyranthes species like Z. candida and Z. minina have few thicker seeds.
+  </p>
+  <a href ="https://www.pacificbulbsociety.org/pbswiki/index.php/habranthus" class="btn btn-primary"> Description</a>
+  </div>
 </div>
+<div class="card">
+  <img src="Euphorbia.jpg" class="Card-img-top">
+  <div class="card-body">
+    <h3> Euphorbia </h3>
+      <p> This genus is extremely varied in its plant forms and habitats, ranging from large, succulent trees and tiny, compact succulents to herbaceous perennials and semi- or evergreen, herbaceous shrubs. Their unique flower structure consists of conspicuous leaf bracts of yellow, red, purple, brown, or green, with tiny, male and female floral parts in contrasting colors. Many species are notable for these peculiar flowers, as well as their handsome foliage and their remarkable form. </p>
+
+      <a href="https://www.finegardening.com/genus/euphorbia" class="btn btn-primary"> Description</a>
+      </div>
+      </div>
+    </div>
+      </body>
+      </html>
+
