modified plant description

--- a/plants.html
+++ b/plants.html
@@ -185,8 +185,7 @@
   <img src = "Habranthus3.jpg" class="Card-img-top">
   <div class="card-body">
   <h3> Habranthus </h3>
-   <p class ="card-text"> Habranthus is a genus in the Amaryllidaceae family with species from Central and South America extending into southern North America. They have narrow, linear or strap-shaped leaves. Their flowers are very similar to Zephyranthes and both are called rain lilies. Habranthus flowers point upward BUT at an angle and have unequal stamens in 4 different sizes, and Zephyranthes flowers point straight up and have 6 equal stamens, or 3 shorter and 3 taller. Zephyranthes flowers tends to be star shaped and Habranthus have somewhat irregular flowers. Additionally, the seeds of Habranthus are slightly winged (and thicker during the fruit dehiscence). Some Zephyranthes species like Z. candida and Z. minina have few thicker seeds.
-  </p>
+   <p class ="card-text"> Habranthus is a genus in the Amaryllidaceae family with species from Central and South America extending into southern North America. They have narrow, linear or strap-shaped leaves. Their flowers are very similar to Zephyranthes and both are called rain lilies. Habranthus flowers point upward BUT at an angle and have unequal stamens in 4 different sizes, and Zephyranthes flowers point straight up and have 6 equal stamens, or 3 shorter and 3 taller.  </p>
   <a href ="https://www.pacificbulbsociety.org/pbswiki/index.php/habranthus" class="btn btn-primary"> Description</a>
   </div>
 </div>
