modified little bit code

--- a/plants.html
+++ b/plants.html
@@ -51,19 +51,22 @@
     </div>
     </div>
      </div>
+     
 <p>When we reduce the page size slowly plant name row breaks first since the length of plant name is greater than the letter in the name.</p>
  
 
-<div>
+<div class="container">
+
   <img src ="Crocosmia.jpg" class="img-fluid" height ="400" width="400" alt = "Crocosmiaplant">
   <img src ="Habranthus3.jpg" class="img-fluid" height ="400" width="400" alt = "Habranthus">
-  <img src ="Euphorbia.jpg" class="img-thumbnail" height ="400" width="400" alt = "Euphorbiaplant">
+  <img src ="Euphorbia.jpg" class="img-fluid" height ="400" width="400" alt = "Euphorbiaplant">
 
 
  </div>
 
 
- <div>
+ <div class="container">
+
   <img src ="Crocosmia.jpg" class="img-thumbnail" height ="400" width="400" alt = "Crocosmiaplant">
   <img src ="Habranthus3.jpg" class="img-thumbnail" height ="400" width="400" alt = "Habranthus">
   <img src ="Euphorbia.jpg" class="img-thumbnail" height ="400" width="400" alt = "Euphorbiaplant">
